public/stylesheets/layout.css
@charset "utf-8";
/* CSS Document */

body {
    font: 12px Verdana, "Lucida Grande", Helvetica, Arial, sans-serif;
	
	margin:0;
}

img {
	border:0;
}

h3 a {
	font-size:10px;
	font-weight:normal;
}

.container
{
	width:950px;
	margin-left:auto;
	margin-right:auto;
}

.no-border { border: none; }

#call_list
{
	padding:0;
	margin:0;
	
	margin-left:10px;
}
#call_list li
{
	list-style-type:none;
}

.list_item
{
	
}

#user-info
{
	color:#fff;
	float:right;
	
	padding-top:10px;
	width:500px;
	text-align:right;
	
	height:28px;
}

#user-info a
{
	color:#fff;
}

#header
{
	background:url('/images/header-bg.gif') top left repeat-x;
	height:191px;
	
	margin-bottom:20px;
}

#footer
{
	text-align:center;
/*  clear:both;*/
	
/*  padding-top:20px;*/
}

#logo
{
	margin-top:73px;
	float:left;
}

#logo-2
{
	margin-top:55px;
	float:left;
}

#people
{
	float:right;
}

#main-col
{
	width:710px;
	background:#efefef url('/images/main-col-bg.gif') repeat-y;
	float:left;
}

#main-col-header
{
	background:url('/images/main-col-header.gif') no-repeat;
	
	height:45px;
	
	font-size:1.6em;
	color:#fff;
	
	padding-left:20px;
	padding-top:10px;
}

#secondary-col
{
	width:400px;
	
	margin-left:auto;
	margin-right:auto;
	
	background:url('/images/login-col-bg.gif') repeat-y;
}

#secondary-col-header
{
	background:url('/images/login-col-header.gif') no-repeat;
	height:11px;
}

#secondary-col-footer
{
	background:url('/images/login-col-footer.gif') no-repeat;
	height:11px;
}


#lightbox-col-700
{
	width:700px;
	margin-left: auto ;
	margin-right: auto ;
	
	

}

#lightbox-col-header-700
{
	background:url('/images/ightbox-col-header-700.gif') no-repeat;
	height:11px;
}

#lightbox-col-footer-700
{
	background:url('/images/lightbox-col-footer-700.gif') no-repeat;
	height:11px;
}

.lightbox-content-700
{
	padding:10px;
	padding-left:15px;
	padding-right:15px;
	background:url('/images/lightbox-col-bg-700.gif') center repeat-y;
	font-size:14px;
}


#lightbox-col
{
	width:418px;
	
}

#lightbox-col-header
{
	background:url('/images/login-col-header.png') no-repeat;
	height:11px;
}

#lightbox-col-footer
{
	background:url('/images/login-col-footer.gif') no-repeat;
	height:11px;
}

.lightbox-content
{
	padding:10px;
	padding-left:15px;
	padding-right:15px;
	background:url('/images/lightbox-col-bg.gif') center repeat-y;
	font-size:14px;
}


#user_signup-col
{
	width:950px;
	background:url('/images/call_list-col-bg.gif') repeat-y;
	float:left;
}

#user_signup-col-header
{
	background:url('/images/call_list-col-header.gif') no-repeat;
	
	height:45px;
	
	font-size:1.6em;
	color:#fff;
	
	padding-left:20px;
	padding-top:10px;
}

#user_signup-col-footer
{
	background:url('/images/call_list-col-footer.gif') no-repeat;
	height:12px;
}


#call_list-col
{
	width:950px;
	background:url('/images/call_list-col-bg.gif') repeat-y;
	float:left;
}

#call_list-col-header
{
	background:url('/images/call_list-col-header.gif') no-repeat;
	
	height:45px;
	
	font-size:1.6em;
	color:#fff;
	
	padding-left:20px;
	padding-top:10px;
}

#call_list-col-footer
{
	background:url('/images/call_list-col-footer.gif') no-repeat;
	height:12px;
}

.content
{
	padding:5px;
}

.big
{
	font-size:1.6em;
	color:#4691b1;
}

#slider-labels
{
	width:595px;
	float:right;
}

.slider-label, .slider-label-end
{
	float:left;
	width:127px;
	text-align:center;
}

.slider-label-end
{
	width:105px;
}

#main-col-footer
{
	background:url('/images/main-col-footer.gif') no-repeat;
	height:12px;
}

#right-col
{
	float:right;
	width:225px;
	
	margin-left:5px;
	background:url('/images/right-col-bg.gif') repeat-y;
}

#right-col-header
{
	background:url('/images/right-col-header.gif') no-repeat;
	height:11px;
}

#right-col-footer
{
	background:url('/images/right-col-footer.gif') no-repeat;
	height:11px;
}

.divider
{
	margin-left:20px;
	margin-right:20px;
	
	color:#585858;
}

.user
{
	color:#d6e94f;
	font-weight:bold;
}

.footer {
    font-size:91%;
    color: rgb(0, 0, 204);
}


.gtopbar {
    padding:1px 10px 1px 4px;
}

.gtopbar td.maincell {
    font-size:91%;
}

.on, .on:visited, .on:link {
    color:#0000CC;
}
.on:active {
    color:#F00000;
}

.overflow-hide {
    overflow:hidden;
}

.rf {
    float:left;
}

.rnsecs {

}
.rnsecs .sec {
    border-top-style: solid;
    border-right-style: solid;
    border-bottom-style: solid;
    border-left-style: solid;
    border-top-color: #797979;
    border-right-color: #0000FF;
    border-bottom-color: #797979;
    border-left-color: #797979;
    border-top-width: 1px;
    border-right-width: 4px;
    border-bottom-width: 1px;
    border-left-width: 2px;
/*    height: 35px;*/
    background-color: #E9E9E9;

}

.rnsecs .sec a, .rnsecs .sec span {
    display:block;
    letter-spacing:-1px;
    text-decoration:none;
    width:15ex;
    height: 35px;
    padding-top: 10px;
    padding-right: 10px;
    padding-bottom: 5px;
    padding-left: 10px;   
}

.rnsecs .sec a:hover, .rnsecs .sec span:hover {
    background:#FFFFFF none repeat scroll 0%;
    color:#505050;

    border-top-style: solid;
    border-top-width: 3px;
    border-top-color: #0000FF;
    
    border-right-style: none;
    border-right-width: 3px;
    border-right-color: #0000FF;
        
    border-bottom-style: solid;
    border-bottom-width: 3px;
    border-bottom-color: #0000FF;
    
    border-left-style: solid;
    border-left-width: 3px;
    border-left-color: #0000FF;
}

.rnsecs .sec .secln, .rnsecs .sec .secln:visited, .rnsecs .sec .secln:link, .rnsecs .sec .seclnact, .rnsecs .sec .seclnact:visited, .rnsecs .sec .seclnact:link {
    color:#333333;
    font-size:114%;
    font-weight:bold;
    text-decoration:none;
}
.rnsecs .sec .secln:hover, .rnsecs .sec .seclnact:hover {
    text-decoration:underline;
}
.rnsecs .sec .seclnd {
    color:#7777CC;
    font-size:114%;
    font-weight:bold;
    text-decoration:none;
}
.rnsecs .sec .seclnlt, .rnsecs .sec .seclnlt:visited, .rnsecs .sec .seclnlt:link {
    color:#333333;
}
.rnsecs .sec .seclnltd {
    color:#7777CC;
}
/* ... */

